# CP_lab3

./: CMakeLists.txt  README.md  main.cpp
BigInt/: BigInt.cpp  BigInt.h  IntegerMod.cpp
Test/: BigIntTest.cpp  BigIntTest.h  CMakeLists.txt  test.cpp
